# tech-challenger-soat10-phase4-supply-microservice

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  configmap.yaml  docker-compose.yml  metrics.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
config/: custom_openapi.py  database.py  settings.py
config/init_db/: init_db.sh
config_k8s/: claim-mysql-db.yaml  hpa.yaml  mysql-db.yaml  svc-mysql-db.yaml  svc-tech-challenger.yaml  tech-challenger-src.yaml
migrations/: env.py
migrations/versions/: 97e5618569bf_populate_category_table.py  97f5618569bf_populate_product_table.py  a75742071745_create_tables_category_and_product.py
src/: app.py
src/adapters/driven/repositories/: category_repository.py  product_repository.py
src/constants/: product_category.py
src/core/: containers.py
src/core/auth/: dependencies.py  oauth2.py
src/core/exceptions/: bad_request_exception.py  base_exception.py  entity_duplicated_exception.py  entity_not_found_exception.py  forbidden_exception.py  invalid_credentials_exception.py  invalid_token_exception.py  unauthorized_access_exception.py  utils.py  validation_exception.py
src/core/shared/: identity_map.py
src/schemas/: __init__.py  health_check_schema.py
terraform/app/: data.tf  main.tf  mock_remote_state.tf  outputs.tf  variables.tf
terraform/db/: main.tf  outputs.tf  variables.tf
terraform/infra/: main.tf  outputs.tf  variables.tf
terraform/mock/: mock_eks_outputs.tfstate  mock_rds_outputs.tfstate
tests/: conftest.py  test_health_check.py
tests/factories/: category_factory.py  product_factory.py
(+45 files in other folders)
